# EdgeLM

./: .gitignore  .gitmodules  CNAME  README.md  _config.yml  build.gradle.kts  gradle.properties  index.html  integration.html  jitpack.yml  keystore.properties.template  log.txt  privacy.html  settings.gradle.kts
contract/: build.gradle.kts
contract/src/main/aidl/ai/edgelm/contract/: IEdgeLMService.aidl  ITokenCallback.aidl
demo-app-a/: build.gradle.kts
demo-app-a/src/main/: AndroidManifest.xml
demo-app-a/src/main/java/ai/edgelm/demo/a/: MainActivity.kt
demo-app-b/: build.gradle.kts
demo-app-b/src/main/: AndroidManifest.xml
demo-app-b/src/main/java/ai/edgelm/demo/b/: MainActivity.kt
docs/: EdgeLM-Brand-Book.docx  INTEGRATION.md  PHASE-0-BUILD-PLAN.md  PHASE1-KV-POOLING.md  PHASE1-OPENAI-HTTP-SHIM.md  PHASE1-ROADMAP.md  PHASE1-SCHEDULER.md  PHASE1-VULKAN-GPU.md  WEEK-1-LLAMACPP-INTEGRATION.md  edgelm-architecture.html  edgelm-brand.html  edgelm-logo-concepts.html  edgelm-logo-genz.html
docs/assets-genz/android/: README.md
docs/phase1-http/: EdgeLMHttpServer.kt
docs/phase1-scheduler/: AIScheduler.kt
docs/play/: DATA-SAFETY.md  PRIVACY.md  QA-CHECKLIST.md  README-PLAY.md  SCREENSHOTS.md  STORE-LISTING.md
docs/week1/: CMakeLists.txt  llama_runner.cpp  llama_runner.h
docs/wip/: edgelm_jni_engine.cpp  llama_runner_continuous_batching.cpp
gradle/wrapper/: gradle-wrapper.properties
runtime-service/: build.gradle.kts  proguard-rules.pro
runtime-service/src/main/: AndroidManifest.xml
runtime-service/src/main/cpp/: CMakeLists.txt  edgelm_jni.cpp  llama_runner.cpp  llama_runner.h
runtime-service/src/main/java/ai/edgelm/runtime/: DownloadWorker.kt  ModelCatalog.kt  ModelDownloadService.kt  OnboardingActivity.kt  PlaygroundActivity.kt  RuntimeActivity.kt
runtime-service/src/main/java/ai/edgelm/service/: AIScheduler.kt  DeviceProfile.kt  EdgeLMHttpServer.kt  EdgeLMService.kt  EngineProfile.kt  EngineRegistry.kt  InferenceEngine.kt  LiteRtEngine.kt  LlamaCppEngine.kt  NativeBridge.kt
runtime-service/src/main/res/drawable/: ic_stat_edgelm.xml  splash_ghost.xml
runtime-service/src/main/res/values/: strings.xml  themes.xml
runtime-service/src/test/java/ai/edgelm/service/: EngineRoutingTest.kt
samples/hello-edgelm/: README.md  build.gradle.kts  settings.gradle.kts
samples/hello-edgelm/app/: build.gradle.kts
samples/hello-edgelm/app/src/main/: AndroidManifest.xml
samples/hello-edgelm/app/src/main/java/com/example/helloedgelm/: MainActivity.kt
sdk/: build.gradle.kts  consumer-rules.pro
sdk/src/main/: AndroidManifest.xml
sdk/src/main/java/ai/edgelm/: EdgeLM.kt
sdk/src/main/java/ai/edgelm/internal/: RuntimeConnection.kt
tools/: measure_memory.ps1  measure_memory.sh  push_model_and_install.ps1  push_model_and_install.sh
